# TrustMe

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/core/: persistence.h  stealth.h
include/modules/: payload.h
include/utils/: crypto.h  logger.h  obfuscation.h  syscalls.h
res/: resourses.rc
src/: main.cpp  manifest.xml
src/core/: elevation.cpp  persistence.cpp  stealth.cpp
src/modules/: payload.cpp
src/utils/: logger.cpp  network.cpp  obfuscation.cpp  syscalls_stubs.asm
